Feat: CRUD ARTICLE

--- a/templates/admin/article/_form.html.twig
+++ b/templates/admin/article/_form.html.twig
@@ -1,4 +1,8 @@
-{{ form_start(form) }}
+{{ form_start(form, {
+    'attr':{
+        'novalidate':'novalidate'
+    }
+}) }}
     {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+    <button class="btn btn-primary btn-lg">{{ button_label|default('Save') }} <i class="fas fa-save"></i></button>
 {{ form_end(form) }}
