--- a/templates/admin/article/show.html.twig
+++ b/templates/admin/article/show.html.twig
@@ -1,46 +1,213 @@
-{% extends 'base.html.twig' %}
+{% import "macros/breadcrumb.html.twig" as utils %}
 
-{% block title %}Article{% endblock %}
+{% extends 'admin/base.html.twig' %}
+
+{% block title %}Article | {{ app_name}} {% endblock %}
+
+{% block breadcrumb %}
+    {{ utils.breadcrumb('View Article',[
+        {
+            path:'article_index',
+            name:'Manage Articles'
+        }
+    ])}}
+{% endblock %}
 
 {% block body %}
-    <h1>Article</h1>
+<div class="card card-solid">
+    <div class="card-body">
+        <div class="row">
+            <div class="col-12 col-sm-6">
+                <h3 class="d-inline-block d-sm-none">LOWA Men’s Renegade GTX Mid Hiking Boots Review</h3>
+                <div class="col-12">
+                {% for item in article.images | slice(0,1) %}
+                <img src="{{ asset('img/article/' ~ item.name ) }}" class="product-image" alt="Product Image">
+                {% else %}
+                <img src="{{ asset('img/vide.png') }}" class="product-image" alt="Product Image">
+                {% endfor %}
+                </div>
+                <div class="col-12 product-image-thumbs">
+                {% for key, item in article.images %}
+                    <div class="product-image-thumb {% if loop.first %}active{% endif %}">
+                        <img src="{{ asset('img/article/' ~ item.name ) }}" alt="Product Image">
+                    </div>
+                {% endfor %}
+                </div>
+            </div>
+            <div class="col-12 col-sm-6">
+                <h3 class="my-3">{{ article.title }}</h3>
+                <p>{{ article.description }}</p>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ article.id }}</td>
-            </tr>
-            <tr>
-                <th>Title</th>
-                <td>{{ article.title }}</td>
-            </tr>
-            <tr>
-                <th>Price</th>
-                <td>{{ article.price }}</td>
-            </tr>
-            <tr>
-                <th>Description</th>
-                <td>{{ article.description }}</td>
-            </tr>
-            <tr>
-                <th>Created_at</th>
-                <td>{{ article.createdAt ? article.createdAt|date('Y-m-d H:i:s') : '' }}</td>
-            </tr>
-            <tr>
-                <th>Updated_at</th>
-                <td>{{ article.updatedAt ? article.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
-            </tr>
-            <tr>
-                <th>Enabled</th>
-                <td>{{ article.enabled ? 'Yes' : 'No' }}</td>
-            </tr>
-        </tbody>
-    </table>
+                <hr>
+                <h4>Available Colors</h4>
+                <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                    <label class="btn btn-default text-center active">
+                        <input type="radio" name="color_option" id="color_option_a1" autocomplete="off" checked>
+                        Green
+                        <br>
+                        <i class="fas fa-circle fa-2x text-green"></i>
+                    </label>
+                    <label class="btn btn-default text-center">
+                        <input type="radio" name="color_option" id="color_option_a2" autocomplete="off">
+                        Blue
+                        <br>
+                        <i class="fas fa-circle fa-2x text-blue"></i>
+                    </label>
+                    <label class="btn btn-default text-center">
+                        <input type="radio" name="color_option" id="color_option_a3" autocomplete="off">
+                        Purple
+                        <br>
+                        <i class="fas fa-circle fa-2x text-purple"></i>
+                    </label>
+                    <label class="btn btn-default text-center">
+                        <input type="radio" name="color_option" id="color_option_a4" autocomplete="off">
+                        Red
+                        <br>
+                        <i class="fas fa-circle fa-2x text-red"></i>
+                    </label>
+                    <label class="btn btn-default text-center">
+                        <input type="radio" name="color_option" id="color_option_a5" autocomplete="off">
+                        Orange
+                        <br>
+                        <i class="fas fa-circle fa-2x text-orange"></i>
+                    </label>
+                </div>
 
-    <a href="{{ path('article_index') }}">back to list</a>
+                <h4 class="mt-3">Size <small>Please select one</small></h4>
+                <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                    <label class="btn btn-default text-center">
+                        <input type="radio" name="color_option" id="color_option_b1" autocomplete="off">
+                        <span class="text-xl">S</span>
+                        <br>
+                        Small
+                    </label>
+                    <label class="btn btn-default text-center">
+                        <input type="radio" name="color_option" id="color_option_b2" autocomplete="off">
+                        <span class="text-xl">M</span>
+                        <br>
+                        Medium
+                    </label>
+                    <label class="btn btn-default text-center">
+                        <input type="radio" name="color_option" id="color_option_b3" autocomplete="off">
+                        <span class="text-xl">L</span>
+                        <br>
+                        Large
+                    </label>
+                    <label class="btn btn-default text-center">
+                        <input type="radio" name="color_option" id="color_option_b4" autocomplete="off">
+                        <span class="text-xl">XL</span>
+                        <br>
+                        Xtra-Large
+                    </label>
+                </div>
 
-    <a href="{{ path('article_edit', {'id': article.id}) }}">edit</a>
+                <div class="bg-gray py-2 px-3 mt-4">
+                    <h2 class="mb-0">
+                        {{ article.formatterPrice }} F cfa
+                    </h2>
+                    <h4 class="mt-0">
+                        <small>Buying price : {{ article.formatterBuying }} F cfa </small>
+                    </h4>
+                </div>
 
-    {{ include('article/_delete_form.html.twig') }}
+                <div class="mt-4">
+                    <a href="{{ path('article_edit',{ id: article.id }) }}" class="btn btn-success btn-lg btn-flat">
+                        Editer
+                        <i class="fas fa-pencil-alt"></i>
+                    </a>
+                </div>
+
+                <div class="mt-4 product-share">
+                <a href="#" class="text-gray">
+                    <i class="fab fa-facebook-square fa-2x"></i>
+                </a>
+                <a href="#" class="text-gray">
+                    <i class="fab fa-twitter-square fa-2x"></i>
+                </a>
+                <a href="#" class="text-gray">
+                    <i class="fas fa-envelope-square fa-2x"></i>
+                </a>
+                <a href="#" class="text-gray">
+                    <i class="fas fa-rss-square fa-2x"></i>
+                </a>
+                </div>
+            </div>
+        </div>
+        <div class="row mt-4">
+            <nav class="w-100">
+                <div class="nav nav-tabs" id="product-tab" role="tablist">
+                    <a class="nav-item nav-link active" id="product-desc-tab" data-toggle="tab" href="#product-desc" role="tab" aria-controls="product-desc" aria-selected="true">Description</a>
+                    <a class="nav-item nav-link" id="product-comments-tab" data-toggle="tab" href="#product-comments" role="tab" aria-controls="product-comments" aria-selected="false">Comments</a>
+                    <a class="nav-item nav-link" id="product-rating-tab" data-toggle="tab" href="#product-rating" role="tab" aria-controls="product-rating" aria-selected="false">Rating</a>
+                </div>
+            </nav>
+            <div class="tab-content p-3" id="nav-tabContent">
+                <div class="tab-pane fade show active" id="product-desc" role="tabpanel" aria-labelledby="product-desc-tab"
+                    >{{ article.description }} </div>
+                <div class="tab-pane fade" id="product-comments" role="tabpanel" aria-labelledby="product-comments-tab"
+                > comments </div>
+                <div class="tab-pane fade" id="product-rating" role="tabpanel" aria-labelledby="product-rating-tab"
+                > rating </div>
+            </div>
+        </div>
+        <hr>
+        <div class="row">
+            <div class="col-md-4">
+            <h4>Article info</h4>
+                <table class="table table-striped">
+                    <tbody>
+                        <tr>
+                            <td scope="row">Quantity</td>
+                            <td>{{ article.quantity}}</td>
+                        </tr>
+                        <tr>
+                            <td scope="row">Created at</td>
+                            <td>{{ article.createdAt ? article.createdAt|date('Y-m-d H:i:s') : '' }}</td>
+                        </tr>
+                        <tr>
+                            <td scope="row">Updated at</td>
+                            <td>{{ article.updatedAt ? article.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
+                        </tr>
+                        <tr>
+                            <td scope="row">Enabled</td>
+                            <td>{{ article.enabled ? 'Yes' : 'No' }}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="col-md-8">
+                <h4>Specificity of the article</h4>
+                <table class="table table-striped">
+                    <tbody>
+                    {% for item in article.options %}
+                        <tr>
+                            <td scope="row">{{ item.title }}</td>
+                            <td>{{ item.content }}</td>
+                        </tr>
+                    {% else %}
+                        <h4 class="text-center">No Specificity</h4>
+                    {% endfor %}
+                        
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <a class="btn btn-dark m-2" href="{{ path('article_index') }}">back to list <i class="fa fa-arrow-circle-left" aria-hidden="true"></i></a>
+    </div>
+<!-- /.card-body -->
+</div>
+
+{% endblock %}
+
+{% block javascripts %}
+<script>
+  $(document).ready(function() {
+    $('.product-image-thumb').on('click', function () {
+      var $image_element = $(this).find('img')
+      $('.product-image').prop('src', $image_element.attr('src'))
+      $('.product-image-thumb.active').removeClass('active')
+      $(this).addClass('active')
+    })
+  })
+</script>
 {% endblock %}
