Feat: listing d'article and card

--- a/templates/macros/search.html.twig
+++ b/templates/macros/search.html.twig
@@ -1,7 +1,7 @@
 {% macro search(form) %}
 <div class="jumbotron">
     <div class="container">
-        {{ form_start(form,{action:'produits'}) }}
+        {{ form_start(form,{action:'articles'}) }}
         <div class="form-row align-items-end">
             <div class="col-8">
             {{ form_row(form.mots)}}
