--- a/templates/admin/category/index.html.twig
+++ b/templates/admin/category/index.html.twig
@@ -17,7 +17,7 @@
 {% block body %}
 
 {% for item in app.flashes('success') %}
-  {{ alert.alert(item,'success')}}
+  {{ alerte.alert(item,'success')}}
 {% endfor %}
 
 <div class="row">
