--- a/templates/macros/table.html.twig
+++ b/templates/macros/table.html.twig
@@ -15,6 +15,7 @@
       "responsive": true, 
       "lengthChange": false, 
       "autoWidth": false,
+      "order":[[3,"desc"]],
       "buttons": 
         ["csv", "excel", "pdf", "print"]
     }).buttons().container().appendTo('#{{id}}_wrapper .col-md-6:eq(0)');
