feat: manage order 1

--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -376,6 +376,7 @@
 <script>
   $(document).ready(function(){
     //Initialize Select2 Elements
+    $('[data-toggle="tooltip"]').tooltip()
     $('.select2').select2()
   })
 </script>
