--- a/templates/macros/button.html.twig
+++ b/templates/macros/button.html.twig
@@ -3,5 +3,32 @@
 {% endmacro %}
 
 {% macro delete() %}
-        <button type="submit" class="btn btn-danger"><i class="fas fa-trash-alt"></i></button>
+    <button type="submit" class="btn btn-danger"><i class="fas fa-trash-alt"></i></button>
+{% endmacro %}
+
+{% macro order(state) %}
+    {% set type = '' %}
+    {% set title = '???' %}
+    {% if state == 'completed' %}
+        {% set  type = 'success' %}
+    {% endif %}
+
+    {% if state == 'canceled' %}
+        {% set  type = 'danger' %}
+    {% endif %}
+
+    {% if state == 'waiting' %}
+        {% set  type = 'default' %}
+    {% endif %}
+
+    {% if state == 'in progress' %}
+        {% set  type = 'info' %}
+    {% endif %}
+
+    <button 
+            data-toggle="tooltip"
+            data-placement="bottom"
+            title="{{ title }}" class="btn btn-{{type}} ">   
+             {{ state }}
+    </button>  
 {% endmacro %}
