--- a/templates/admin/order/_datatable.html.twig
+++ b/templates/admin/order/_datatable.html.twig
@@ -1,30 +1,47 @@
-<table id="datatable_{{ id }}" class="table table-striped">
+{% import "macros/button.html.twig" as btn %}
+<table id="datatable_{{ id }}" class="table">
     <thead>
         <tr>
-            <th>Id</th>
-            <th>invoice</th>
-            <th>Note</th>
+            <th>Order</th>
+            <th>state</th>
+            <th>Date</th>
+            <th>Facturation</th>
             <th>Total</th>
-            <th>Created at</th>
-            <th>Updated at</th>
-            <th>Shipping state</th>
             <th>actions</th>
         </tr>
     </thead>
     <tbody>
     {% for order in orders %}
         <tr>
-            <td>{{ order.id }}</td>
-            <td>{{ order.number }}</td>
-            <td>{{ order.note }}</td>
-            <td>{{ order.total | number_format(2,'.',' ') }} XOF</td>
-            <td>{{ order.createdAt ? order.createdAt|date('Y-m-d H:i:s') : '' }}</td>
-            <td>{{ order.updatedAt ? order.updatedAt|date('Y-m-d H:i:s') : 'Not modify' }}</td>
-            <td>{{ order.shippingState }}</td>
+            <td>#{{ order.id }}
+            {{ order.user.personne.firstname ~ ' ' ~ order.user.personne.lastname ~ ' ' }}
+             <a 
+                class="float-right"
+                data-toggle="tooltip"
+                data-placement="bottom"
+                title="Look"
+                href="{{ path('order_show', {'id': order.id}) }}"><i class="fa fa-eye text-dark"></i></a>
+                
+            </td>
             <td>
-                <a href="{{ path('order_show', {'id': order.id}) }}"><i class="fa fa-eye text-dark"></i></a>
-            {% if order.paymentState != 'paid' %}
-                <a class="ml-1 mr-1" href="{{ path('order_edit', {'id': order.id}) }}"> <i class="fas fa-pencil-alt text-success"></i></a>
+            {{ btn.order(order.state) }}
+            
+            </td>
+            <td>{{ order.createdAt ? order.createdAt|date('d-m-Y H:i:s') : '' }}</td>
+            <td>
+            {{ order.user.personne.firstname ~ ' ' ~ order.user.personne.lastname ~ ', ' ~ order.shippingAdress.street }}<br/>
+            {{ order.shippingAdress.postalCode ~ ' ' ~ order.shippingAdress.city }} <br/>
+            <small class="text-info">Via : {{ order.payment.paymentMethod.name}} </small>
+
+            </td>
+            <td>{{ order.total | number_format(2,'.',' ') }} XOF</td>
+            <td>
+            {% if order.state != 'completed' %}
+                <a 
+                    data-toggle="tooltip"
+                    data-placement="bottom"
+                    title="Edit Order"
+                    class="ml-1 mr-1" href="{{ path('order_edit', {'id': order.id}) }}"> <i class="fas fa-pencil-alt text-success"></i></a>
             {% endif %}
             </td>
         </tr>
@@ -36,13 +53,11 @@
     </tbody>
     <tfoot>
         <tr>
-            <th>Id</th>
-            <th>invoice</th>
-            <th>Note</th>
+            <th>Order</th>
+            <th>state</th>
+            <th>Facturation</th>
+            <th>Createdat</th>
             <th>Total</th>
-            <th>Created_at</th>
-            <th>Updated_at</th>
-            <th>Shipping_state</th>
             <th>actions</th>
         </tr>
     </tfoot>
