--- a/templates/admin/order/_form.html.twig
+++ b/templates/admin/order/_form.html.twig
@@ -4,5 +4,5 @@
     }
 }) }}
     {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+    <button class="btn btn-primary btn-lg">{{ button_label|default('Save') }}</button>
 {{ form_end(form) }}
