--- a/templates/admin/order/index.html.twig
+++ b/templates/admin/order/index.html.twig
@@ -56,25 +56,25 @@
                     <li class="nav-item">
                         <a class="nav-link active" id="custom-tabs-three-home-tab"
                             data-toggle="pill" href="#custom-tabs-three-home" role="tab"
-                            aria-controls="custom-tabs-three-home" aria-selected="true">Order |<span class="font-weight-bold"> 
+                            aria-controls="custom-tabs-three-home" aria-selected="true">Tous (<span class="font-weight-bold"> 
                             {{ orders| length }}
-                            </span></a>
+                            </span>)</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" id="custom-tabs-three-profile-tab" data-toggle="pill"
-                            href="#order-paid" role="tab"
+                            href="#order-completed" role="tab"
                             aria-controls="custom-tabs-three-profile"
-                            aria-selected="false">Paid |<span class="font-weight-bold"> 
-                            {{ ordersPaid| length }}
-                            </span></a>
+                            aria-selected="false">Completed (<span class="font-weight-bold"> 
+                            {{ ordersCompleted| length }}
+                            </span>)</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" id="custom-tabs-three-profile-tab" data-toggle="pill"
-                            href="#order-not-paid" role="tab"
+                            href="#order-en-attente" role="tab"
                             aria-controls="custom-tabs-three-profile"
-                            aria-selected="false">Expired |<span class="font-weight-bold"> 
-                            {{ ordersExpired| length }}
-                            </span></a>
+                            aria-selected="false">Waiting (<span class="font-weight-bold"> 
+                            {{ ordersWaiting| length }}
+                            </span>)</a>
                     </li>
                    
                 </ul>
@@ -86,13 +86,13 @@
                             {{ include ("admin/order/_datatable.html.twig",{id:'1',orders: orders}) }}
                                 
                     </div>
-                    <div class="tab-pane fade" id="order-not-paid" role="tabpanel"
+                    <div class="tab-pane fade" id="order-en-attente" role="tabpanel"
                         aria-labelledby="custom-tabs-three-profile-tab">
-                            {{ include ("admin/order/_datatable.html.twig",{id:'1',orders: ordersExpired}) }}
+                            {{ include ("admin/order/_datatable.html.twig",{id:'2',orders: ordersWaiting}) }}
                     </div>
-                    <div class="tab-pane fade" id="order-paid" role="tabpanel"
+                    <div class="tab-pane fade" id="order-completed" role="tabpanel"
                         aria-labelledby="custom-tabs-three-profile-tab">
-                            {{ include ("admin/order/_datatable.html.twig",{id:'1',orders: ordersPaid}) }}
+                            {{ include ("admin/order/_datatable.html.twig",{id:'3',orders: ordersCompleted}) }}
                     </div>
                 </div>
             </div>
@@ -108,6 +108,8 @@
 
 {% block javascripts %}
 {{ table.jsDataTable('datatable_1') }} 
+{{ table.jsDataTable('datatable_2') }} 
+{{ table.jsDataTable('datatable_3') }} 
 {# {{table.jsDataTable('datatable_2')  }} #}
   <script>
    $(document).ready(function(){
