--- a/templates/macros/table.html.twig
+++ b/templates/macros/table.html.twig
@@ -17,7 +17,7 @@
       "autoWidth": false,
       "order":[[3,"desc"]],
       "buttons": 
-        ["csv", "excel", "pdf", "print"]
+        ["csv", "excel", "pdf", "print","colvis"]
     }).buttons().container().appendTo('#{{id}}_wrapper .col-md-6:eq(0)');
    })
   </script>
