feat: listing order

--- a/templates/admin/order/_order.html.twig
+++ b/templates/admin/order/_order.html.twig
@@ -85,7 +85,7 @@
 <div class="col-6">
     <p class="lead">Payment Methods:</p>
     {{ order.payment.paymentMethod.name }}
-    <img src="{{ asset('adminlte/dist/img/credit/visa.png') }}" alt="Visa">
+    {# <img src="{{ asset('adminlte/dist/img/credit/visa.png') }}" alt="Visa"> #}
     {# <img src="{{ asset('adminlte/dist/img/credit/mastercard.png') }}" alt="Mastercard">
     <img src="{{ asset('adminlte/dist/img/credit/american-express.png') }}" alt="American Express">
     <img src="{{ asset('adminlte/dist/img/credit/paypal2.png') }}" alt="Paypal"> #}
