--- a/templates/admin/order/index.html.twig
+++ b/templates/admin/order/index.html.twig
@@ -62,18 +62,26 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" id="custom-tabs-three-profile-tab" data-toggle="pill"
-                            href="#order-completed" role="tab"
-                            aria-controls="custom-tabs-three-profile"
-                            aria-selected="false">Completed (<span class="font-weight-bold"> 
-                            {{ ordersCompleted| length }}
-                            </span>)</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" id="custom-tabs-three-profile-tab" data-toggle="pill"
                             href="#order-en-attente" role="tab"
                             aria-controls="custom-tabs-three-profile"
                             aria-selected="false">Waiting (<span class="font-weight-bold"> 
                             {{ ordersWaiting| length }}
+                            </span>)</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="custom-tabs-three-profile-tab" data-toggle="pill"
+                            href="#order-in-progress" role="tab"
+                            aria-controls="custom-tabs-three-profile"
+                            aria-selected="false">In progress (<span class="font-weight-bold"> 
+                            {{ ordersInProgress| length }}
+                            </span>)</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="custom-tabs-three-profile-tab" data-toggle="pill"
+                            href="#order-completed" role="tab"
+                            aria-controls="custom-tabs-three-profile"
+                            aria-selected="false">Completed (<span class="font-weight-bold"> 
+                            {{ ordersCompleted| length }}
                             </span>)</a>
                     </li>
                    
@@ -86,13 +94,17 @@
                             {{ include ("admin/order/_datatable.html.twig",{id:'1',orders: orders}) }}
                                 
                     </div>
+                    <div class="tab-pane fade" id="order-in-progress" role="tabpanel"
+                        aria-labelledby="custom-tabs-three-profile-tab">
+                            {{ include ("admin/order/_datatable.html.twig",{id:'2',orders: ordersInProgress}) }}
+                    </div>
                     <div class="tab-pane fade" id="order-en-attente" role="tabpanel"
                         aria-labelledby="custom-tabs-three-profile-tab">
-                            {{ include ("admin/order/_datatable.html.twig",{id:'2',orders: ordersWaiting}) }}
+                            {{ include ("admin/order/_datatable.html.twig",{id:'3',orders: ordersWaiting}) }}
                     </div>
                     <div class="tab-pane fade" id="order-completed" role="tabpanel"
                         aria-labelledby="custom-tabs-three-profile-tab">
-                            {{ include ("admin/order/_datatable.html.twig",{id:'3',orders: ordersCompleted}) }}
+                            {{ include ("admin/order/_datatable.html.twig",{id:'4',orders: ordersCompleted}) }}
                     </div>
                 </div>
             </div>
@@ -110,6 +122,7 @@
 {{ table.jsDataTable('datatable_1') }} 
 {{ table.jsDataTable('datatable_2') }} 
 {{ table.jsDataTable('datatable_3') }} 
+{{ table.jsDataTable('datatable_4') }} 
 {# {{table.jsDataTable('datatable_2')  }} #}
   <script>
    $(document).ready(function(){
