--- a/templates/admin/order/show.html.twig
+++ b/templates/admin/order/show.html.twig
@@ -17,7 +17,7 @@
 {% block body %}                  
 <div class="row">
   <div class="col-12">
-    {{ ribbon.ribbon(order.paymentState)}}
+    {{ ribbon.ribbon(order.state)}}
     <!-- Main content -->
       <div class="invoice p-3 mb-3">
         {% include ('admin/order/_order.html.twig') %}
