--- a/templates/admin/order/edit.html.twig
+++ b/templates/admin/order/edit.html.twig
@@ -1,8 +1,19 @@
 {% import "macros/breadcrumb.html.twig" as utils %}
+{% import "macros/head.html.twig" as head %}
+{% import "macros/foot.html.twig" as foot %}
+{% import "macros/alertes.html.twig" as alerte %}
+{% import "macros/table.html.twig" as table %}
+
 
 {% extends 'admin/base.html.twig' %}
 
+{% block stylesheets %}
+  {{ head.dataTable() }}
+{% endblock %}
+
 {% block title %}Order - {{ order.user.personne.firstname ~ ' ' ~ order.user.personne.lastname  }} - {{ app_name }} {% endblock %}
+
+
 
 {% block breadcrumb %}
     {{ utils.breadcrumb('Edit Order',[
@@ -14,19 +25,123 @@
 {% endblock %}
 
 {% block body %}
+{% for item in app.flashes('success') %}
+  {{ alerte.alert(item,'success')}}
+{% endfor %}
+    
 <div class="row">
     <div class="col-md-8">
+        <div class="card card-primary card-outline card-tabs">
+            <div class="card-header p-0 pt-1 border-bottom-0">
+                <ul class="nav nav-tabs" id="custom-tabs-three-tab" role="tablist">
+                    <li class="nav-item">
+                        <a class="nav-link {% if app.request.query.get('tab') is null or app.request.query.get('tab') == '' %}active{% endif %} " id="custom-tabs-three-home-tab"
+                            data-toggle="pill" href="#order-detail" role="tab"
+                            aria-controls="custom-tabs-three-home" aria-selected="true">Details Order</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link " id="custom-tabs-three-profile-tab" data-toggle="pill"
+                            href="#order-facturation" role="tab"
+                            aria-controls="custom-tabs-three-profile"
+                            aria-selected="false">Facturation</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if app.request.query.get('tab') == 'articles' %}active{% endif %} " id="custom-tabs-three-profile-tab" data-toggle="pill"
+                            href="#order-articles" role="tab"
+                            aria-controls="custom-tabs-three-profile"
+                            aria-selected="false">Details articles</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="custom-tabs-three-profile-tab" data-toggle="pill"
+                            href="#order-shipping" role="tab"
+                            aria-controls="custom-tabs-three-profile"
+                            aria-selected="false">Details Shipping</a>
+                    </li>
+                    
+                </ul>
+            </div>
+            <div class="card-body">
+                <div class="tab-content" id="custom-tabs-three-tabContent">
+                    <div class="tab-pane fade {% if app.request.query.get('tab') is null or app.request.query.get('tab') == ''  %}show active{% endif %}" id="order-detail"
+                        role="tabpanel" aria-labelledby="custom-tabs-three-home-tab">
+                         {{ include('admin/order/_form.html.twig', {'button_label': 'Update'}) }}
+                    </div>
+                    <div class="tab-pane fade" id="order-facturation" role="tabpanel"
+                        aria-labelledby="custom-tabs-three-profile-tab">
+                        Facturation
+                    </div>
+                    <div class="tab-pane fade {% if app.request.query.get('tab') == 'articles' %}show active{% endif %}" id="order-articles" role="tabpanel"
+                        aria-labelledby="custom-tabs-three-profile-tab">
+                        <table id="datatable_1" class="table">
+                            <thead>
+                                <th>Quantity</th>
+                                <th>Name</th>
+                                <th>Price</th>
+                                <th>Total</th>
+                                <th>actions</th>
+                            </thead>
+                            <tbody>
+                            {% for item in order.orderItem %}
+                                <tr>
+                                    <td width="2">{{ item.quantity }}</td>
+                                    <td>{{ item.produitName }} </td>
+                                    <td>{{ item.unitPrice| number_format(2,',',' ') }}</td>
+                                    <td width="100">{{ item.unitsTotal | number_format(2,',',' ') }}</td>
+                                    <td>
+                                        <a href="#"><i class="fas fa-pencil-alt text-success"></i> </a>
+                                        <form class="d-inline-block" method="post" action="{{ path('order_item_delete', {'id': item.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+                                            <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ item.id) }}">
+                                            <button class="btn"><i class="text-danger fa fa-trash-alt"></i></button>
+                                        </form>
+                                    </td>
+                                </tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
+                        {{ form_start(formItem,{
+                            'attr':{
+                                'novalidate':'novalidate',
+                                'class':'col-lg-12'
+                            }
+                        }) }}
+                        <div class="row">
+                            <div class="col-md-5">
+                                {{ form_row(formItem.article)}}
+                            </div>
+                            <div class="col-md-4">
+                                {{ form_row(formItem.unit_price)}}
+                            </div>
+                            <div class="col-md-2">
+                                {{ form_row(formItem.quantity)}}
+                            </div>
+                            <div class="col">
+                            {{ form_widget(formItem) }}
+                                <button class="btn btn-default">{{ button_label|default('Save') }}</button>
+                            </div>
+                        </div>
+                        {{ form_end(formItem) }}
+
+                    </div>
+                    <div class="tab-pane fade" id="order-shipping" role="tabpanel"
+                        aria-labelledby="custom-tabs-three-profile-tab">
+                            {# {{ include ("admin/order/_datatable.html.twig",{id:'4',orders: ordersCompleted}) }} #}
+                    </div>
+                </div>
+            </div>
+            <!-- /.card -->
+        </div>
+    </div>
+    {# <div class="col-md-8">
         <div class="card">
             <div class="card-header">
                 <h4>Edit Order</h4>
             </div>
             <div class="card-body">
-             {{ include('admin/order/_form.html.twig', {'button_label': 'Update'}) }}
                  <a href="{{ path('order_index') }}">back to list</a>
 
             </div>
         </div>
-    </div>
+    </div> #}
     <div class="col-md-4">
         <div class="card card-outline card-success">
             <div class="card-header">
@@ -54,4 +169,21 @@
 </div>
 
     {# {{ include('admin/order/_delete_form.html.twig') }} #}
+{% endblock %}
+
+{% block foot %}
+{{ foot.dataTable()}}
+{% endblock %}
+
+{% block javascripts %}
+{{ table.jsDataTable('datatable_1') }} 
+{# {{table.jsDataTable('datatable_2')  }} #}
+  <script>
+   $(document).ready(function(){
+     //nivagation 
+     $('#gestions').addClass(' menu-is-opening menu-open')
+     $('.gestions').addClass('active')
+     $('.gestion-order').addClass('active')
+   })
+  </script>
 {% endblock %}
